src/test/deca/syntax/valid/decl_class/test_decl_class.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
// 
// Historique:
//    cree le 01/01/2024

class B {
    int B() {       
    }
}

class A extends B {
    int A() {
        
    }
}

