src/test/deca/syntax/invalid/decl_class/test_decl_class_two_super.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
// mismatched input 'extends' expecting '{'
// Historique:
//    cree le 01/01/2024

class B{}
class C{}
class A extends B extends C {
    
}

